--- a/index.html
+++ b/index.html
@@ -1,14 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WDD 130 | Personal Homepage</title>
+    <title>Luz Aroni | WDD 130</title>
 </head>
-<body>
-    <h1>Welcome to WDD 130.</h1>
-    <p>This page will become your homepage for the course. You will remove this text and replace it with your own personal details.</p>
 
-    <img src="images/salt-lake-temple.jpg" alt="The Salt Lake Temple.">
+<body>
+    <header>
+        <nav>
+            <a href="#">Home</a>
+            <a href="wwr/">Rafting Website</a>
+        </nav>
+    </header>
+    <main>
+        <h1>Luz Aroni | WDD 130</h1>
+        <img src="images/profile.jpg" alt="Hello, my name is Luz Aroni" width="200">
+        <p>My name is Luz, I live in Cusco, Peru with my family and my beautiful cat Loui. I enjoy
+            doing puzzles, spending time with my family and traveling. I am currently studying
+            Software Development at BYU. I am excited about learning as much as possible about web
+            developing and design!</p>
+    </main>
+    <footer>
+        <p>©2026 🌸 Luz Aroni 🌸 | Cusco, Peru</p>
+    </footer>
 </body>
+
 </html>
