--- a/week02/basic-layout.html
+++ b/week02/basic-layout.html
@@ -1,11 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>placeholder</title>
+    <title>Basic HTML content</title>
+    <meta name="description" content="A basic HTML structure example using semantic HTML elements">
+    <meta name="author" content="Luz Aroni">
 </head>
+
 <body>
-    
+    <header><img src="basic-logo.png" alt="this is the logo" width="128" height="128">
+    </header>
+    <nav>
+        <ul>
+            <li><a href="https://byui.edu">BYU-Provo</a>
+            </li><a
+              href="https://www.youtube.com/watch?v=XR7Ev14vUh8&list=RDXR7Ev14vUh8&start_radio=1">Song
+                Pray for me</a>
+        </ul>
+    </nav>
+    <main>
+        <h1>Basic HTML structure</h1>
+    </main>
+    <main>
+        <section>
+            <h2>Heading</h2>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Impedit, maxime?</p>
+        </section>
+        <section>
+            <h2>Heading</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Porro, quam!</p>
+        </section>
+    </main>
+    <main>
+        <aside><img
+              src="https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/aba-nigeria/1280x800/aba-nigeria-temple-lds-1636397-wallpaper.jpg"
+              alt="Aba Nigeria Temple" width="200">
+        </aside>
+    </main>
+    <footer>
+        <p>Luz Aroni</p>
+    </footer>
 </body>
+
 </html>
