--- a/week02/basic-layout.html
+++ b/week02/basic-layout.html
@@ -10,14 +10,14 @@
 </head>
 
 <body>
-    <header><img src="basic-logo.png" alt="this is the logo" width="128" height="128">
+    <header><img src="images/basic-logo.png" alt="this is the logo" width="128" height="128">
     </header>
     <nav>
         <ul>
-            <li><a href="https://byui.edu">BYU-Provo</a>
-            </li><a
-              href="https://www.youtube.com/watch?v=XR7Ev14vUh8&list=RDXR7Ev14vUh8&start_radio=1">Song
-                Pray for me</a>
+            <li><a href="https://byui.edu">BYU-Provo</a></li>
+            <li><a
+                  href="https://www.youtube.com/watch?v=XR7Ev14vUh8&list=RDXR7Ev14vUh8&start_radio=1">Song
+                    Pray for me</a></li>
         </ul>
     </nav>
     <main>
