--- a/week02/basic-layout.html
+++ b/week02/basic-layout.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
 
 <head>
     <meta charset="UTF-8">
@@ -8,6 +8,8 @@
     <meta name="description" content="A basic HTML structure example using semantic HTML elements">
     <meta name="author" content="Luz Aroni">
 </head>
+
+</html>
 
 <body>
     <header><img src="images/basic-logo.png" alt="this is the logo" width="128" height="128">
