--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Luz Aroni | WDD 130</title>
+    <meta name="description"
+      content="Luz Aroni WDD130 course homepage showcasing web development projects and learning progress">
+    <meta name="author" content="Luz Aroni">
+    <link rel="stylesheet" href="styles/styles.css">
+
 </head>
 
 <body>
