--- a/index.html
+++ b/index.html
@@ -27,6 +27,15 @@
             Software Development at BYU. I am excited about learning as much as possible about web
             developing and design!</p>
     </main>
+    <aside>
+        <h2>Peru</h2>
+        <img src="images/peru.jpg" alt="My beautiful Cusco">
+        <p>Peru is a country in South America known for its rich history, the Inca civilization, and
+            landmarks
+            such as Machu Picchu. It has diverse geography including the Andes mountains, the Amazon
+            rainforest,
+            and a long Pacific coastline.</p>
+    </aside>
     <footer>
         <p>©2026 🌸 Luz Aroni 🌸 | Cusco, Peru</p>
     </footer>
