--- a/index.html
+++ b/index.html
@@ -17,17 +17,32 @@
         <nav>
             <a href="#">Home</a>
             <a href="wwr/">Rafting Website</a>
+            <a href="www.linkedin.com/in/luz-aroni-5b1014290">Linkedin profile</a>
+            <a href="https://facebook.com.">Facebook</a>
         </nav>
     </header>
     <main>
         <h1>Luz Aroni | WDD 130</h1>
         <img src="images/profile.jpg" alt="Hello, my name is Luz Aroni" width="200">
         <p>My name is Luz, I live in Cusco, Peru with my family and my beautiful cat Loui. I enjoy
-            doing puzzles, spending time with my family and traveling. I am currently studying
-            Software Development at BYU. I am excited about learning as much as possible about web
-            developing and design!</p>
+            doing puzzles, spending time with my family, playing with my cat, listening to music and
+            traveling to explore
+            new
+            places and cultures. I am currently studying Software Development at
+            BYU, and I am excited to learn as much as possible about web development and design,
+            especially the
+            creative and problem solving aspects of building websites.</p>
+        <ul class="box">
+            <li><a href="https://www.churchofjesuschrist.org/temples/details/lima-peru-temple?lang=eng"
+                  target="_blank">Lima Peru Temple</a></li>
+            <li><a href="https://www.churchofjesuschrist.org/temples/details/nauvoo-illinois-temple?lang=eng"
+                  target="_blank">Nauvoo illinois temple</a>
+            </li>
+            <li><a href="https://www.churchofjesuschrist.org/temples/details/salt-lake-temple?lang=eng"
+                  target="_blank">Salt Lake City Utah Temple</a></li>
+        </ul>
     </main>
-    <aside>
+    <aside class="box">
         <h2>Peru</h2>
         <img src="images/peru.jpg" alt="My beautiful Cusco">
         <p>Peru is a country in South America known for its rich history, the Inca civilization, and
