--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <nav>
             <a href="#">Home</a>
             <a href="wwr/">Rafting Website</a>
-            <a href="www.linkedin.com/in/luz-aroni-5b1014290">Linkedin profile</a>
+            <a href="https://www.linkedin.com/in/luz-aroni-5b1014290">Linkedin profile</a>
             <a href="https://facebook.com.">Facebook</a>
         </nav>
     </header>
