--- a/wwr/about.html
+++ b/wwr/about.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wild Pad Rafting </title>
+    <title>About Us - Wild Pad Rafting</title>
     <meta name="description" content="This is a website to describe a white rafting company">
     <meta name="author" content="Luz Aroni">
     <link rel="stylesheet" href="styles/rafting.css">
@@ -15,7 +15,7 @@
         <img src="images/rafting.jpeg" alt="Logo">
         <nav>
             <ul>
-                <a href="https//.index.html">Home</a>
+                <a href="index.html">Home</a>
                 <a href="about.html">About Us</a>
                 <a href="trips.html">Trips</a>
                 <a href="contac.html">Contact Us</a>
@@ -55,3 +55,5 @@
         </nav>
     </footer>
 </body>
+
+</html>
