--- a/wwr/about.html
+++ b/wwr/about.html
@@ -14,12 +14,10 @@
     <header>
         <img src="images/rafting.jpeg" alt="Logo">
         <nav>
-            <ul>
-                <a href="index.html">Home</a>
-                <a href="about.html">About Us</a>
-                <a href="trips.html">Trips</a>
-                <a href="contac.html">Contact Us</a>
-            </ul>
+            <a href="index.html">Home</a>
+            <a href="about.html">About Us</a>
+            <a href="trips.html">Trips</a>
+            <a href="contac.html">Contact Us</a>
         </nav>
     </header>
 
@@ -49,9 +47,9 @@
     <footer>
         <p>©2026 Wild Pad Rafting | 🌸 Luz Aroni 🌸 </p>
         <nav>
-            <a href="Facebook"><img src="images/facebook.svg" alt="Facebook Icon"></a>
-            <a href="Instagram"><img src="images/instagram.svg" alt="Instagram Icon"></a>
-            <a href="TikTok"><img src="images/tiktok.svg" alt="TikTok Icon"></a>
+            <a href="facebook"><img src="images/facebook.svg" alt="Facebook Icon"></a>
+            <a href="instagram"><img src="images/instagram.svg" alt="Instagram Icon"></a>
+            <a href="tiktok"><img src="images/tiktok.svg" alt="TikTok Icon"></a>
         </nav>
     </footer>
 </body>
