--- a/wwr/about.html
+++ b/wwr/about.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us - Wild Pad Rafting</title>
+    <title>Wild Pad Rafting | About Us</title>
     <meta name="description" content="This is a website to describe a white rafting company">
     <meta name="author" content="Luz Aroni">
     <link rel="stylesheet" href="styles/rafting.css">
@@ -17,7 +17,7 @@
             <a href="index.html">Home</a>
             <a href="about.html">About Us</a>
             <a href="trips.html">Trips</a>
-            <a href="contac.html">Contact Us</a>
+            <a href="contact.html">Contact Us</a>
         </nav>
     </header>
 
@@ -46,7 +46,7 @@
     </main>
     <footer>
         <p>©2026 Wild Pad Rafting | 🌸 Luz Aroni 🌸 </p>
-        <nav>
+        <nav class="socialmedia">
             <a href="facebook"><img src="images/facebook.svg" alt="Facebook Icon"></a>
             <a href="instagram"><img src="images/instagram.svg" alt="Instagram Icon"></a>
             <a href="tiktok"><img src="images/tiktok.svg" alt="TikTok Icon"></a>
