--- a/wwr/about.html
+++ b/wwr/about.html
@@ -26,6 +26,7 @@
             <img src="images/raftingbackgorund.jpg" alt="Rafting Background">
             <h1>About Us - Wild Pad Rafting</h1>
             <article>
+                <h2>Our Happy Clients</h2>
                 <img src="images/happyclient.jpg" alt="Happy Client">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque suscipit aperiam
                     exercitationem? Numquam doloremque fuga ipsam molestias veritatis atque cum
