--- a/wwr/about.html
+++ b/wwr/about.html
@@ -35,14 +35,44 @@
                 </p>
             </article>
         </div>
-        <section>
+        <section class="history">
             <h2>History</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores quas alias quod
                 voluptatum, incidunt ad maiores, facere, minima perspiciatis dolorum nihil ipsum
                 magni quo quidem? Eius ea voluptatum perferendis voluptate.</p>
+            <img src="images/history.jpg" alt="history">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt animi magni
+                quibusdam odit! Id impedit nesciunt corrupti tempore dolor est rerum fuga, pariatur
+                repellendus magnam iure, doloribus sed perferendis alias?</p>
         </section>
-        <section>
+        <section class="adventures">
             <h2>Adventure Awaits You!</h2>
+
+            <div class="adventure-images">
+                <figure>
+                    <img src="images/adventure1.jpg" alt="Chili River">
+                    <figcaption>Chili River</figcaption>
+                </figure>
+
+                <figure>
+                    <img src="images/adventure2.jpg" alt="Mayo River">
+                    <figcaption>Mayo River</figcaption>
+                </figure>
+
+                <figure>
+                    <img src="images/adventure3.jpg" alt="Sunsets Adventure">
+                    <figcaption>Sunsets Adventure</figcaption>
+                </figure>
+
+                <figure>
+                    <img src="images/adventure4.jpg" alt="Urubamba Rapids">
+                    <figcaption>Urubamba Rapids</figcaption>
+                </figure>
+
+                <figure>
+                    <img src="images/adventure5.jpg" alt="Night Falls">
+                    <figcaption>Night Falls</figcaption>
+                </figure>
         </section>
     </main>
     <footer>
