--- a/wwr/about.html
+++ b/wwr/about.html
@@ -73,8 +73,10 @@
                     <img src="images/adventure5.jpg" alt="Night Falls">
                     <figcaption>Night Falls</figcaption>
                 </figure>
+            </div>
         </section>
     </main>
+
     <footer>
         <p>©2026 Wild Pad Rafting | 🌸 Luz Aroni 🌸 </p>
         <nav class="socialmedia">
