--- a/wwr/about.html
+++ b/wwr/about.html
@@ -7,7 +7,7 @@
     <title>Wild Pad Rafting | About Us</title>
     <meta name="description" content="This is a website to describe a white rafting company">
     <meta name="author" content="Luz Aroni">
-    <link rel="stylesheet" href="styles/rafting.css">
+    <link rel="stylesheet" href="styles/rafting.css?v=2026">
 </head>
 
 <body>
